Update and rename beatuploypol.html to beat-up-loy/index.html

--- a/beat-up-loy/index.html
+++ b/beat-up-loy/index.html
@@ -60,11 +60,11 @@
 <body>
     <div class="container">
         <header>
-            <h1>Beat the shit out of loypoll</h1>
+            <h1>Beat the shit out of loyp*ll (cant say the full name or github will kill me)</h1>
         </header>
         <img src="preview.png">
         <div class="game-description">
-            <p>Say hi to B.T.S.O.O.L, where you beat up loypoll! It's great for stress and its bad person so yeah!</p>
+            <p>Say hi to B.T.S.O.O.L, where you beat up loyp*ll! It's great for stress and its bad person so yeah!</p>
         </div>
         <div class="download-button">
             <a href="https://tacoyummers.github.io/beatuploypol_v1.zip">Download V1</a>
