--- a/beat-up-loy/index.html
+++ b/beat-up-loy/index.html
@@ -13,6 +13,7 @@
             padding: 0;
         }
         .container {
+            max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
         }
