--- a/midis/index.html
+++ b/midis/index.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
-<body>
-    <ul>
-        <li><a href="Car100K.mid" download>Car100K.mid</a></li>
-        <li><a href="It's Pizza Time - Pizza Tower.mid" download>It's Pizza Time - Pizza Tower.mid</a></li>
-        <li><a href="Its_Pizza_Time.mid" download>Its_Pizza_Time.mid</a></li>
-        <li><a href="LyricWulf - Spooky Scary Skeletons.mid" download>LyricWulf - Spooky Scary Skeletons.mid</a></li>
-        <li><a href="Pizza Tower OST - Wednesdays (Floor 3 Vacation Resort) [WIP] (1).mid" download>Pizza Tower OST - Wednesdays (Floor 3 Vacation Resort) [WIP] (1).mid</a></li>
-        <li><a href="RUSH+E.midi" download>RUSH+E.midi</a></li>
-        <li><a href="Slime Rancher - Ranch Night theme by Space_dreamer.mid" download>Slime Rancher - Ranch Night theme by Space_dreamer.mid</a></li>
-        <li><a href="Spooky Scary Skeletons.mid" download>Spooky Scary Skeletons.mid</a></li>
-        <li><a href="elevator jam - roblox doors.mid" download>elevator jam - roblox doors.mid</a></li>
-    </ul>
-</body>
-</html>
+<a href="Car100K.mid">Car100K.mid</a>
+<br></br>
+<a href="It's Pizza Time - Pizza Tower.mid">It's Pizza Time - Pizza Tower.mid</a>
+<br></br>
+<a href="Its_Pizza_Time.mid">Its_Pizza_Time.mid</a>
+<br></br>
+<a href="LyricWulf - Spooky Scary Skeletons.mid">LyricWulf - Spooky Scary Skeletons.mid</a>
+<br></br>
+<a href="Pizza Tower OST - Wednesdays (Floor 3 Vacation Resort) [WIP] (1).mid">Pizza Tower OST - Wednesdays (Floor 3 Vacation Resort) [WIP] (1).mid</a>
+<br></br>
+<a href="RUSH+E.midi">RUSH+E.midi</a>
+<a href="Slime Rancher - Ranch Night theme by Space_dreamer.mid">Slime Rancher - Ranch Night theme by Space_dreamer.mid</a>
+<br></br>
+<a href="Spooky Scary Skeletons.mid">Spooky Scary Skeletons.mid</a>
+<br></br>
+<a href="elevator jam - roblox doors.mid">elevator jam - roblox doors.mid</a>
