--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Website</title>
+    <title>TacoYummers</title>
     <style>
         body {
             display: flex;
@@ -69,14 +69,6 @@
             <li>Artist (Aseprite & Adobe) 🎨</li>
             <li>Coder (GML & Lua) 💻</li>
             <li>Composer (FL Studio) 🎤</li>
-        </ul>
-        <h3>Interests:</h3>
-        <ul>
-            <li>Creative</li>
-            <li>Curious</li>
-            <li>Friendly</li>
-            <li>Adventurous</li>
-            <li>Hardworking</li>
         </ul>
     </div>
 
